--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <p class="text-xl font-semibold">كل الحقوق محفوظة <span style="color: var(--red-color);" class="mx-1 font-bold">إضمن</span>&copy 2025</p>
             </div>
             <div class="footer-logo mx-auto">
-                <img src="images/LOGO-text.png" class="" alt="Edmen">
+                <img src="Images/LOGO-text.png" class="" alt="Edmen">
             </div>
             <div class="footer-social flex items-center justify-around text-2xl p-6 px-10  gap-x-5">
                 <a href="tel:+20 01142680064">
